2004-10-06  Sebastian Rahtz  <rahtz@spqr-ibm>

	* roma.php: when attribute is added to element, make it show properly

2004-10-06  root  <rahtz@spqr-ibm>

	* roma/stylesheets/changeModules.xsl (date): sort list of elements
	in a module
	
