@@ -1,3 +1,9 @@
+2004-10-07  Sebastian Rahtz  <rahtz@spqr-ibm>
+
+	* roma/romadom.php: similar to previous, but this time when it is
+	a class. add new xquery/attsbytag.xq so that it works with either
+	element or class
+
 2004-10-06  Sebastian Rahtz  <rahtz@spqr-ibm>
 
 	* roma.php: when attribute is added to element, make it show properly
